--- a/data/style.css
+++ b/data/style.css
@@ -1,6 +1,6 @@
 :root {
     /* Цвета и основные переменные */
-    --bg: #0b0b0d;
+    --bg: #4040da;
     --card-bg: rgba(30, 30, 34, 0.6);
     --panel-bg: rgba(20, 20, 23, 0.45);
     --panel-border: rgba(255, 255, 255, 0.06);
@@ -16,32 +16,34 @@
     --max-card-height: 780px;
 }
 
+/*========== general ==========*/
 * {
     box-sizing: border-box;
 }
-/* Page background */
+
 html {
     height: auto;
 }
 
-/* Центрирование (desktop) */
 body {
     margin: 0;
-    padding: 20px;
+    padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        "Helvetica Neue", Arial;
-    min-height: 100vh; /* минимум на высоту окна */
-    background: linear-gradient(180deg, var(--bg) 0%, #5c5c5c 80%);
+        "Helvetica Neue", Arial, "Iter";
+    min-height: 100vh;
+    background: linear-gradient(180deg, var(--bg) 0%, #8b6b02 80%);
     background-repeat: no-repeat;
-    background-size: cover; /* растягиваем градиент на весь body */
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 2rem;
     overflow-y: auto;
 }
-/* Title */
+
 h1 {
-    margin: 10rem 0 30px 0;
+    margin: 0;
     font-size: 3rem;
     color: #fff;
     letter-spacing: 0.2px;
@@ -51,23 +53,29 @@ h1 {
 hr {
     width: 90%;
     height: 1px;
-    padding: 0;
-    margin: 0;
+    padding: 0 1rem;
+    margin: 0 1rem;
     border: none;
     background-color: #5d5d5d;
 }
 
-/* Большая карточка settings */
-.settings {
+span {
+    color: var(--muted);
+    font-size: 1.2rem;
+    padding: 0;
+    margin: 0;
+}
+img {
+    max-width: 1rem;
+    max-height: 1rem;
+    /* opacity: 0.8; */
+}
+/*========== settings ==========*/
+.card {
     width: 90%;
-    /* height:100%; */
     max-width: var(--max-card-width);
-    /* max-height:var(--max-card-height); */
-    /* box-sizing:border-box; */
     background: var(--card-bg);
     border-radius: 15px;
-    /* padding: 0 20px; */
-    margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,21 +85,32 @@ hr {
     border: 1px solid rgba(255, 255, 255, 0.03);
     overflow: hidden;
 }
-
-.settings > div {
+/*========== state and ip ==========*/
+.status-bar {
+    background-color: red;
+    width: 60%;
+    height: 5px;
+    border-radius: 0 0 5px 5px;
+}
+.text {
     width: 100%;
-    min-height: 2rem;
-    /* background-color: #ff80004f; */
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: start;
+    gap: 1rem;
+    padding: 0 1rem;
+    min-height: 3rem;
 }
 
-.modes {
+/*========== effects ==========*/
+.effects {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    /* gap:12px; */
-    padding: 16px 0;
 }
-.mode {
+
+.effects > div {
     margin: 0 2px;
     padding: 12px 16px;
     border-radius: 10px;
@@ -100,32 +119,21 @@ hr {
     color: var(--muted);
 }
 
-/* Sliders */
-span {
-    color: var(--muted);
-    font-size: 1.2rem;
-    padding: 0;
-    margin: 0;
-}
-
-.slider-container {
-    flex-direction: column;
-    align-items: center;
-    padding: 0.5rem 1rem;
-}
-.slider-info {
+/*========== sliders ==========*/
+.slider {
+    width: 100%;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
-    width: 100%;
-    padding-bottom: 0.5rem;
-    color: var(--muted);
+    align-items: center;
+    justify-content: start;
+    gap: 1rem;
+    min-height: 3rem;
+    padding: 0 1rem;
 }
 
-.slider {
-    /* -webkit-appearance: none; */
+.slider > input[type="range"] {
     width: 100%;
-    padding: 0;
+
     background: rgba(255, 255, 255, 0.2);
     outline: none;
     opacity: 0.9;
@@ -133,66 +141,51 @@ span {
     transition: opacity 0.2s;
 }
 
-.div-button {
+.card-btn {
     display: flex;
-    flex-direction: row;
+    flex-flow: row nowrap;
     align-items: center;
-    justify-content: center;
-    min-height: 2rem;
-    gap: 60%;
-    padding: 2px 0 4px 0;
+    justify-content: start;
+    gap: 1rem;
     width: 100%;
+    min-height: 3rem;
+    padding: 0 1rem;
 }
 
-.div-button:hover {
+.card-btn:hover {
     cursor: pointer;
     opacity: 0.8;
 }
-.div-button:active {
+.card-btn:active {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
 /* options */
 
 .options {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.options > div {
+.wifi-sta {
     width: 100%;
-    min-height: 2rem;
-    /* background-color: #ff80004f; */
-}
-
-.wifi-sta,
-.wifi-ap {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    padding: 0 1rem;
 }
 
 input[type="text"] {
-    padding: 0.3rem;
+    width: 100%;
+    padding: 0.5rem;
     margin-top: 4px;
-    font-size: 1rem;
+    font-size: 1.2rem;
     border-radius: 0.5rem;
     border: none;
     background-color: #1e1e1e;
     color: var(--muted);
-}
-
-.sta-container {
-    width: 100%;
-    padding: 0 1rem;
-}
-
-.sta-name,
-.sta-password {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
 }
