--- a/data/style.css
+++ b/data/style.css
@@ -1,19 +1,22 @@
 :root {
     /* Цвета и основные переменные */
-    --bg: #4040da;
-    --card-bg: rgba(30, 30, 34, 0.6);
-    --panel-bg: rgba(20, 20, 23, 0.45);
-    --panel-border: rgba(255, 255, 255, 0.06);
-    --accent: #3dd6a0;
-    --muted: rgba(255, 255, 255, 0.65);
+    --body-bg-1: #a200ff;
+    --body-bg-2: #ff6f00;
+
+    --card-bg: rgba(0, 0, 0, 0.4);
+
+    --font-size: 1.2rem;
+
+    --major: rgba(255, 255, 255, 0.8);
+    --muted: rgba(255, 255, 255, 0.3);
+
+    --text-input-bg: rgba(0, 0, 0, 0.4);
+
     --glass-blur: 10px;
-    --radius: 18px;
-    --panel-radius: 14px;
-    --shadow: 0 6px 18px rgba(0, 0, 0, 0.6);
-    --transition: 320ms cubic-bezier(0.22, 0.9, 0.32, 1);
-    --panel-gap: 12px;
-    --max-card-width: 420px; /* desktop visual size similar to mobile */
-    --max-card-height: 780px;
+    --card-border-radius: 1rem;
+
+    --shadow: 0 6px 18px var(--card-bg);
+    --max-card-width: 400px;
 }
 
 /*========== general ==========*/
@@ -29,9 +32,13 @@ body {
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        "Helvetica Neue", Arial, "Iter";
+        "Helvetica Neue", Arial;
     min-height: 100vh;
-    background: linear-gradient(180deg, var(--bg) 0%, #8b6b02 80%);
+    background: linear-gradient(
+        180deg,
+        var(--body-bg-1) 0%,
+        var(--body-bg-2) 80%
+    );
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -45,7 +52,7 @@ body {
 h1 {
     margin: 0;
     font-size: 3rem;
-    color: #fff;
+    color: var(--major);
     letter-spacing: 0.2px;
     font-weight: 600;
 }
@@ -56,53 +63,41 @@ hr {
     padding: 0 1rem;
     margin: 0 1rem;
     border: none;
-    background-color: #5d5d5d;
+    background-color: var(--muted);
 }
 
 span {
-    color: var(--muted);
-    font-size: 1.2rem;
+    color: var(--major);
+    font-size: var(--font-size);
     padding: 0;
     margin: 0;
 }
 img {
     max-width: 1rem;
     max-height: 1rem;
-    /* opacity: 0.8; */
+    opacity: 0.8;
 }
 /*========== settings ==========*/
 .card {
     width: 90%;
     max-width: var(--max-card-width);
     background: var(--card-bg);
-    border-radius: 15px;
+    border-radius: var(--card-border-radius);
     display: flex;
     flex-direction: column;
     align-items: center;
     backdrop-filter: blur(var(--glass-blur)) saturate(1.1);
     -webkit-backdrop-filter: blur(var(--glass-blur));
     box-shadow: var(--shadow);
-    border: 1px solid rgba(255, 255, 255, 0.03);
     overflow: hidden;
 }
-/*========== state and ip ==========*/
+/*========== status bar ==========*/
 .status-bar {
     background-color: red;
     width: 60%;
     height: 5px;
     border-radius: 0 0 5px 5px;
 }
-.text {
-    width: 100%;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: start;
-    gap: 1rem;
-    padding: 0 1rem;
-    min-height: 3rem;
-}
-
 /*========== effects ==========*/
 .effects {
     display: flex;
@@ -113,12 +108,12 @@ img {
 .effects > div {
     margin: 2px;
     padding: 12px 16px;
-    border-radius: 10px;
+    border-radius: var(--card-border-radius);
     color: var(--muted);
 }
 
 .effects > div:active {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: var(--muted);
 }
 
 /*========== sliders ==========*/
@@ -135,8 +130,6 @@ img {
 
 .slider > input[type="range"] {
     width: 100%;
-
-    background: rgba(255, 255, 255, 0.2);
     outline: none;
     opacity: 0.9;
     -webkit-transition: 0.2s;
@@ -159,7 +152,7 @@ img {
     opacity: 0.8;
 }
 .card-btn:active {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: var(--muted);
 }
 
 /* options */
@@ -185,9 +178,9 @@ input[type="text"] {
     width: 100%;
     padding: 0.5rem;
     margin-top: 4px;
-    font-size: 1.2rem;
+    font-size: var(--font-size);
     border-radius: 0.5rem;
     border: none;
-    background-color: #1e1e1e;
+    background-color: var(--text-input-bg);
     color: var(--muted);
 }
