--- a/data/style.css
+++ b/data/style.css
@@ -34,11 +34,18 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
         "Helvetica Neue", Arial;
     min-height: 100vh;
-    background: linear-gradient(
-        180deg,
-        var(--body-bg-1) 0%,
-        var(--body-bg-2) 80%
-    );
+
+    background:
+        linear-gradient(135deg, #75ffc3, #ffb370),
+        repeating-radial-gradient(
+            circle at 50% 50%,
+            rgba(255,255,255,0.03) 0px,
+            rgba(255,255,255,0.03) 1px,
+            transparent 2px,
+            transparent 4px
+        );
+
+
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -103,13 +110,17 @@ img {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    width: 100%;
+    padding: 0 1rem;
+    min-height: 3rem;
 }
 
 .effects > div {
-    margin: 2px;
-    padding: 12px 16px;
+
+    padding: 8px 8px;
     border-radius: var(--card-border-radius);
-    color: var(--muted);
+    color: var(--major);
+    font-size: var(--font-size);
 }
 
 .effects > div:active {
@@ -182,5 +193,5 @@ input[type="text"] {
     border-radius: 0.5rem;
     border: none;
     background-color: var(--text-input-bg);
-    color: var(--muted);
+    color: var(--major);
 }
